# attendome

./: .gitignore  CLAUDE.md  MyConceptHead.ipynb  MyExps.ipynb  README.md  README_old.md  compute_attention_scores.py  pyproject.toml  pytest.ini
.virtual_documents/: MyExps.ipynb
data/induction_heads/: induction_dataset.json
experiments/: _.py  _00_build_induction_dataset.py  _00_extract_attn_maps.py  _00_induction_calc_experimentation.py  _01_compute_rdm.py  _01_rsa_experiment_alex.py  _02_frozen_encoder.py  merge_induction_datasets.py  rsa_experiment_notebook.py
results/rsa_analysis/: rsa_experiment_euclidean_upper_triangle_20250707_134607.json
scripts/: compute_concept_heads.sh  compute_rdms.sh
src/attendome/: __init__.py  attn_utils.py  gpt_utils.py  llama_utils.py
src/attendome/dataset/: __init__.py  attendome.code-workspace  attention_head_classifier.py  compute_indirect_effect.py  data_loader.py  fv_utils.py  rsa_analysis.py  utils.py
src/attendome/model/: discriminative_models.py  generative_models.py  generative_models_multihead.py
tests/: README.md  __init__.py
tests/dataset/: __init__.py  test_attention_head_classifier.py  test_data_loader.py  test_rsa_analysis.py  test_utils.py
