[project]
name = "attendome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Loftus", email = "alexloftus2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "click>=8.2.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "numpy",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "torch",
    "tqdm",
    "transformer-lens>=2.15.4",
    "transformers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
attendome = { workspace = true }

[dependency-groups]
dev = [
    "attendome",
]
